<resources>
    <string name="app_name">Tap Interactions Testing App</string>
    <string name="configMenuItemString">Configuration</string>
    <string name="shapesConfigTitle">Shapes:</string>
    <string name="rotationConfigTitle">The degree to which objects can be rotated:</string>
    <string name="circlesCBText">Circles</string>
    <string name="squaresCBText">Squares</string>
    <string name="trianglesCBText">Triangles</string>
    <string name="sizeConfigTitle">Define bounds for size of generated objects:</string>
    <string name="maxSizeText">Max. size:</string>
    <string name="minSizeText">Min. size:</string>
    <string name="maxRotationText">Max. rotation (°):</string>
    <string name="minRotationText">Min. rotation (°):</string>
    <string name="SessionNameText">Session name:</string>
    <string name="UsernameText">Username:</string>
    <string name="TapNumSessionText">Number of taps per session:</string>
    <string name="dwell_time_TV">Dwell time (s):</string>
    <string name="double_tap_time_TV">Double tap time (s):</string>
    <string name="double_tap_CB">Create new object after fail</string>

    <string name="pressAnywhereTV">Press anywhere to start session</string>

    <string name="max_size_error_msg">Must be greater than Min. size!</string>
    <string name="min_size_error_msg">Must be less than Max. size!</string>
    <string name="max_rot_error_msg">Must be greater than Min. rotation!</string>
    <string name="min_rot_error_msg">Must be less than Max. rotation!</string>
    <string name="too_big_value_error_msg">Value too big!</string>
    <string name="invalid_value_error_msg">Invalid value!</string>

    <string name="save_settings_dialog_msg">Start new session with these settings?</string>
    <string name="invalid_settings_dialog_msg">Invalid settings! Enter valid values and try again.</string>
    <string name="save_btn_text">Yes</string>
    <string name="dont_save_btn_text">No, continue previous</string>
    <string name="ok_btn_text">OK</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="back_btn">Back</string>
    <string name="start_new_session_btn">Apply settings and start new session</string>

    <string name="shapes_cb_file_key">shapesCB</string>
    <string name="size_max_bound_file_key">maxSizeET</string>
    <string name="size_min_bound_file_key">minSizeET</string>
    <string name="rotation_max_bound_file_key">maxRotationET</string>
    <string name="rotation_min_bound_file_key">minRotationET</string>
    <string name="session_name_file_key">sessionNameET</string>
    <string name="username_file_key">usernameET</string>
    <string name="session_tapnum_file_key">sessionTapNumET</string>
    <string name="new_settings_boolean_file_key">newSettingsBoolean</string>
    <string name="interaction_type_file_key">interactionType</string>
    <string name="dwell_time_file_key">dwellTime</string>
    <string name="double_tap_time_file_key">doubleTapTime</string>
    <string name="double_tap_cb_file_key">doubleTapCB</string>
    <string name="canvas_width_file_key">canvasWidth</string>
    <string name="canvas_height_file_key">canvasHeight</string>
    <string name="start_new_session_intent_boolean_file_key">configIntentBoolean</string>

    <string name="session_end_toast_msg">No session in progress!</string>

    <string name="log_name">tap_interactions_log</string>
    <string name="log_file_header">timeStamp,username,sessionName,objectType,xCenter,yCenter,radius,xTouch,yTouch,xTouch2,yTouch2,touchSurface,touchSurface2,objectRotation(°),interactionType,sessionTapNum,minSizeConfig,maxSizeConfig,minRotationConfig,maxRotationConfig,dwellTimeConfig(s),doubleTapTimeConfig(s),isTargetHit,isTapSuccessful,tapTime(ms),firstTapTime(ms),doubleTapTime(ms),secondTapTime(ms)</string>

    <string name="single_tap_menu_btn">Single tap testing</string>
    <string name="long_tap_menu_btn">Long tap testing</string>
    <string name="double_tap_menu_btn">Double tap testing</string>
    <string name="main_menu_title">Select testing mode</string>
</resources>